--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# If you dont have both containers already created the app wont connect due to application starting before db accept connections
 services:
   postgres:
     image: "postgres:latest"
@@ -10,6 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d # Execute initialization scripts
     networks:
       - go-learn-network
 
@@ -20,6 +22,8 @@ services:
       DATABASE_URL: postgres://myuser:mypassword@postgres:5432/mydb?sslmode=disable
     depends_on:
       - postgres
+    volumes:
+      - .:/app
     networks:
       - go-learn-network
     command: go run cmd/server/main.go
