exposing port 8080 on dockerfile to enable access. creating function to enable connection retry if db was not ready to accept connections before app was started

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - .:/app
     networks:
       - go-learn-network
+    ports:
+      - "8080:8080"
     command: go run cmd/server/main.go
 
 volumes:
